--- a/kubernetes/apps/flux-system/weave-gitops/app/secret.sops.yaml
+++ b/kubernetes/apps/flux-system/weave-gitops/app/secret.sops.yaml
@@ -4,8 +4,8 @@ metadata:
     name: cluster-user-auth
     namespace: flux-system
 stringData:
-    password: ENC[AES256_GCM,data:VRQXxEcErePrLHHOfJ1XxPUJjvLPtjjLUc5QWq8YyElXFTBG6/oLmZCeDdnj4uJuczB7kR7YxIGHr+o/,iv:RWAzQY0VSkM/geOQA74XLvEKkeRH5yyjqGsPXP8Dskk=,tag:/tvstgMdTzZSjlby2IeEog==,type:str]
-    username: ENC[AES256_GCM,data:KNzbXIc=,iv:m9csej0/CCmUc0s9atCF1Iybn5oKudhDS/F1CBB1hCA=,tag:B2sNUxjU979leVbe6SlDLg==,type:str]
+    password: ENC[AES256_GCM,data:ih2GJIwY0iEKGsLpZ/IOCa2SZpw0+Eh7P1KDpXybB4ApPRLtXEB0ddngiMB5oeh2k5NHIYG/qFUeaqAu,iv:PqtU8XNgNio5KChoo0G8/zZMRh7pxoD+Stm3fnEMi6k=,tag:Jr0WIYJUVKYxFzzwEinLuA==,type:str]
+    username: ENC[AES256_GCM,data:I/VsIms=,iv:Dh/tR70jTigTE5mj9Ub6uQF1bMH/pHVvrPBzhG+sk9Q=,tag:lAyWwEmYp5zBYwrcroplxQ==,type:str]
 type: Opaque
 sops:
     kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age14q9x9ftcpqfw2kmhmlfzpx5g2wmn7tdnq34uhh4x0r2h6qfmm5dqk07z2e
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB2TXpiY3kyMjQxR20wV29p
-            QU5XY2d5RUJ4M2RSTWRSSXpHTGIyallGWHdnCkRKZWRFZllVeDhrK0FZcC94djhZ
-            cDZMZWJvZjFQMENFb0tERGJMRFdGcUUKLS0tIDRIaXJJYzJFVFI1d2tsa0pVUkRE
-            a3o3L0x2K0I2S3ArajRrOFNlUXJ0b1UKlfVN8t7aRa7PIJ7lG/F/G9N95Hb+6Xtu
-            KZ7K5JXchivXRf+Jg2O0VtTGPbYNB6m+wjgaMHgGQmAoZpHOoCtQEg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSByT1NTUjd6UHBiaWJzT3B3
+            SEwyNDE1Q0dqTjYyZ2JYenNlOGpRaGMvalNvClFTbHZwaE9GZ24zYitLaytSVE8w
+            NFpsbHhmOTZ2Mnh3ZUVXT1VsS1hvb3MKLS0tIFZ6Mk1NY0plK3JXb1k4cGxESUZn
+            NzVqWmp0U3h5MTBKaUdHSXIxVHRTWUEK5PenbDowhTpZ59nR1063/HLG2DUDV2/z
+            3NpFNojKT/ySXY8PDBOVNrNTDGBGngnNpI90QxwM5lq+n6riAKAVIg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-08-26T23:19:22Z"
-    mac: ENC[AES256_GCM,data:1qCNRq+1LasciZohhTyz2G93oYC5cWICrpZd6zbz+ik2YhDwJIprDDa/Poldr1m7YXDWXjsT7/E5NqfMMGavl+xSstQAZQ9sGpRB97ogpLfa89ug8b02+u+x76kKRqndEYLkEAkOqd6mRRD9nWOVSoF0qYUzmrt7XtkDN6C93XA=,iv:o0h49ziSL7VuDP7HpHMqGNdLZCxCojcOfieEWno9vxo=,tag:QnlB1LTfun6sanmySkECYA==,type:str]
+    lastmodified: "2023-08-26T23:37:37Z"
+    mac: ENC[AES256_GCM,data:mYTwvsBB9B2kRVyBrQwN8FkxJ2K6ehk7otuupfjeg23Ny2WF1HVFZtHAgQ+ULc2r1HW5UCpkFQQBQBZjU3pCcUOtOkuBbxW8GtEkYN3aFf4Oz+Xg0ww/ccaDI2BheTPN495LLASDAEGBvApewkcqbz2tOKydKS5YYbeVwVY99FU=,iv:Qs/MyHw3ZjeyJdyAivIbvnjQx6G3+se7sQdrNY2MQyg=,tag:zavoNNJiL13uIyrHPcdRyQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
