--- a/kubernetes/flux/vars/cluster-secrets-user.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets-user.sops.yaml
@@ -4,7 +4,8 @@ metadata:
     name: cluster-secrets-user
     namespace: flux-system
 stringData:
-    SECRET_PLACEHOLDER: ENC[AES256_GCM,data:GUYin2wCBMDGzrNq,iv:LzQArJOl+fESeNf8MdB2x6cz29aFekSHqDA0PO5BFcM=,tag:NMZ+/0PgZ7eq4wcin5pQEw==,type:str]
+    SECRET_MAXMIND_LICENSE_KEY: ENC[AES256_GCM,data:isS6xebmKGQ93UysbfGVIa8a+dFU1BR3qEeTssSKdVr32OEuH+OcdQ==,iv:AoB4IEZ+2+FnGYsB9Yz2UPxAdtb6JKHkcU4xKeQOsI4=,tag:P7c9cKvysdMbYfoMqbxDww==,type:str]
+    SECRET_PLACEHOLDER: ENC[AES256_GCM,data:8Ezzeircr+MoJQf2,iv:s2N/qBSfTsIjVms4+Uckcy0Mn7qYc5wfei/4o74gNy8=,tag:QKyVmGO7axCuwylN4Pq7Bw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -14,14 +15,14 @@ sops:
         - recipient: age14q9x9ftcpqfw2kmhmlfzpx5g2wmn7tdnq34uhh4x0r2h6qfmm5dqk07z2e
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA1S0tRclJuUnNsZHhnN2FD
-            OVJPSUZOUTQyeVVzdndSaU9IME9GTm1LWDBBCmI5REE2TzBOSHlqMzJiY3pqbXc1
-            ZnR2VGdhMnZJV0JTMlN4WFU3TXFrZkkKLS0tIElDY1Jjc2JOcWxUY2VQSEJlUEJQ
-            VVB0MHB6L3MrazJkWDJ4MnlOU2Y4Q1UKLcagvwW6aeIEtWaWWjSzAU03Z6Par09T
-            jF0jeabIeNhtGijXY9gEYvYHgrvfk5RqVnU0atb/WGnPYzNg9Z8sTA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBPTm5tSWpab2hmbHFaWG96
+            THEzd2VDU3V3M1N5T2JNVlAyTE9GR3N3ZVcwCktHTERVL1NsOUcrQUVNSU1oaTlS
+            aUgvK0EvSkJBR3ZxVXJhMlhsek0vUk0KLS0tIGF2SjRTczdHUWFlNGxSQ1ZSUWZE
+            NTYzMk9qcFhtNU1peVljRmo5U0lzYm8KxSPqvn/KUXDyFUR6cU07go7drH0bYtsH
+            ESRxptvos7jwm7R6EWHtMsFeuJ+Uzjonq6MnizLmYujRE3qkJpExhQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-08-26T20:53:57Z"
-    mac: ENC[AES256_GCM,data:f/SshIK8hYYG+07y/56thyIzOP4D/nD93TPcS+PDsDWkbKrNHgXsnzT3e+nQEce/vCd21WM0X7MrqMv//mjR4q2WX+5zkOHLWKoj7BtOQn3B5u+ZRJLYNwq9yV+T+ypAaM60G8JUfc6sewfArRifBbOlXeNae8lxZuW6AmQnbQ0=,iv:VLACXmvkc3U5uxah9trxe2ceymAgxhS7ncv5Ae18dCY=,tag:+xCW63xB6PMEqjgXc50wrA==,type:str]
+    lastmodified: "2023-08-26T23:37:31Z"
+    mac: ENC[AES256_GCM,data:cE7KrlFDoUxjGMhZ5i5r+37+Bt4GCoYgs6iBCFcBcAJX5ZknGpPYfVoUCZVXPAVk6r6jETJzclekitiEWk8/T10dFA77H8FcFgDwLLoymhVoSeTrdad9AdZFew53a5YNspYZgVJthfeg2JMp77Cqd9g4U7cgxf218UWRMdNRu+A=,iv:ny1fu/jRcGWvqQchx/yQcgniiMcgahgWbV/zYOHAWVA=,tag:mh0UmmorltRjdMryv6kZSg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
