--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,10 +4,11 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:2EdiE5t9SwnoWG9m2ld/AclXsNlg,iv:vPtufRQfFX170mQfgDrvOSa3Gq465S0V/3lo7/Oq9VU=,tag:OwfqHfVf1VncHFKXUCAgKA==,type:str]
-    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:xmcOaOtsJqt7Lhi9b6Fw6M8V3MO4lJq1VJ44VCzaje5g0AYf,iv:3KXRIgs9wqpJN+Ez/VekmNwtmqJTsBACSsAg7T8b4hc=,tag:ox+Un5fN002pDOCDKzSD0w==,type:str]
-    SECRET_DOMAIN: ENC[AES256_GCM,data:JJtaWMJxsA0awDvKWw==,iv:WchioS7hZal4Zv3Q1pRyxtjoAW+3e04J/X97a6gdkjs=,tag:RF2Q0pviJt4o7n8cAZLsRA==,type:str]
-    SECRET_DOMAIN2: ENC[AES256_GCM,data:QT9ifPJ+avXTAd8=,iv:wJ+DPKfRWjFatIrFfrzvYNOQcdEZblAWpXL1C5Zay2o=,tag:0Ms6NzSC7F+a4PA29koHww==,type:str]
+    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:szwpj7dRIvQ3esCtjuBQqWE0P4bm,iv:5jwVynCnw/eOkB+pPDnpA/daZu+IhB9tZjVMjl4P8po=,tag:fzux20em3dDM1aTeCc3AQw==,type:str]
+    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:IfdcMKhMZGthJpkI70kS6Xj1aTwasUcbnJbsEqmi2WkOxg7w,iv:c2vFA3r3rvTB66omML0qzQvLGbIgNHrXp1Z+g2v4eNc=,tag:MgB1YK16kj0VZgawn2jTIg==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:50leSeNCqk/digxzwg==,iv:5VsQFEucQdap89kgVVvrY0RzV56kAYT7pzgvb20mTK0=,tag:hsEAg4ydy1UxlNCNWOroxA==,type:str]
+    SECRET_DOMAIN2: ENC[AES256_GCM,data:ksNGbuHivqOsVNA=,iv:2qB514R6bL6EaCiLbWYWx61xip7QlwwkAfkH8/c7TuI=,tag:80f9Zzzy78Skk3TUYIZBSA==,type:str]
+    SECRET_MAXMIND_LICENSE_KEY: ENC[AES256_GCM,data:1SY04vLFK0RWHQEVZYoMkreZ+ksqpzRUHr2fINg8YCIAkNu9okbJGQ==,iv:k2CPKlLz2OPUCRLpjjsX/imX/IhSLZ4E/VJNOpN5wdg=,tag:Tk5sVBU8SKcFslr21R+2GQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +18,14 @@ sops:
         - recipient: age14q9x9ftcpqfw2kmhmlfzpx5g2wmn7tdnq34uhh4x0r2h6qfmm5dqk07z2e
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBXNkh1ZERyV3FZR3FneW5j
-            WUpCYzJmNFRuc2I5SWNNVTNHTkdtQSswTTBzCkcrc29kcUZVdE1MZ0VSSDNVUnFH
-            ZHBDTThGbWRpOWk2cmR0KzhOTnRKUlEKLS0tIENHaXExUktqMVZZNy9ZblBoY1dt
-            anZRQTdCQUpYbnVWejBzVVUzMUcvZ28Ki87d8lfxYNXrYZdA7izYBOV9UtWsgdlI
-            2MlOZ5LCXGlm0XbQGD1K3OQ62d22q98Yv9/mP/ew4+1Ovfw2l+lKCQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBnZ2ZWL1NhL3UrQUFncm1S
+            cVFOdnVTSGlYUGU5NFpKV2NOd2pDNm53bWpnCkE3WDB2Z3hEQkdvTm1xWWlXczNR
+            djFWaHJTWTJacDVxVGpvdGpFYm8zbm8KLS0tIFYxSUg5MFpEM0t4U2hoeUR1Q1Z5
+            N2tScnRuOURJamZpZjZOMjYzVTJDWTQKJGIqsE2lbulgXhB87NwDtjygJKY9FZ1h
+            p4yL9cz+55QGANtKcXgSruzaOLoGQv/SmknBJcjANRmNOBmbSBftBw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-08-26T20:53:58Z"
-    mac: ENC[AES256_GCM,data:1rCRHf3RgKsYvp7bs2RnIXR1BwL+3XA9LtibwaccO9eu8zGLa0KjZ/Bm6Uiacm2e2jETptm4ICdleWmnANM9/v91EMjTwZaP4/kx/fxTwJ5ynIhj8iqGRD44rilvUalBuHNNBxZ+TtSunheAd6ZVryklk/QHcdYR4pZKAECaZ4E=,iv:JMln/a+0YFjPWrgcknZpCIBhJ2HE+BV3gIMyt2bUYlg=,tag:uCnPsr9jBh85mDe1PTbv5g==,type:str]
+    lastmodified: "2023-08-26T23:37:32Z"
+    mac: ENC[AES256_GCM,data:N4HyUUUi61YrvXgWz0rXuT1PEv94EDQBtzFAqE6dfAB8c1tr76QNOJOV55qPoZgU+H4KF6dFqma66u5bNQXSesryPvxXzuXfzOjYXzgGd7s4B6CUOblWE5X9RLdjLtG1dgweyS8sMYj9X6Z6JBGhZG/A6hNPVSvr3Kr8BtlfdwU=,iv:vSkJyttO6FOZC0fHFewUK+qPA0EHiBzuFKZZbxro8gY=,tag:dn0AmgOF1r80XH8QSU6P2w==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
