--- a/kubernetes/apps/networking/nginx/external/helmrelease.yaml
+++ b/kubernetes/apps/networking/nginx/external/helmrelease.yaml
@@ -66,6 +66,8 @@ spec:
         proxy-buffer-size: 16k
         ssl-protocols: TLSv1.3 TLSv1.2
       maxmindLicenseKey: ${SECRET_MAXMIND_LICENSE_KEY}
+      use-geoip2: true
+
       metrics:
         enabled: true
         serviceMonitor:
