--- a/kubernetes/apps/default/hajimari/app/helmrelease.yaml
+++ b/kubernetes/apps/default/hajimari/app/helmrelease.yaml
@@ -41,6 +41,7 @@ spec:
           - default
           - monitoring
           - media
+          - kube-system
       globalBookmarks:
         - group: Daily
           bookmarks:
