loki config update to combat 500

--- a/kubernetes/apps/monitoring/loki/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/loki/app/helmrelease.yaml
@@ -40,6 +40,8 @@ spec:
         table_manager:
           retention_deletes_enabled: true
           retention_period: 2d
+          query_scheduler:
+            max_outstanding_requests_per_tenant: 10000
       serviceMonitor:
         enabled: true
     promtail:
