loki-stack rename

--- a/kubernetes/apps/monitoring/kustomization.yaml
+++ b/kubernetes/apps/monitoring/kustomization.yaml
@@ -7,4 +7,4 @@ resources:
   - ./influxdb/ks.yaml
   - ./kube-prometheus-stack/ks.yaml
   - ./kubernetes-dashboard/ks.yaml
-  - ./loki/ks.yaml
+  - ./loki-stack/ks.yaml
