--- a/kubernetes/apps/monitoring/loki/ks.yaml
+++ b/kubernetes/apps/monitoring/loki/ks.yaml
@@ -2,7 +2,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: cluster-apps-loki-stack
+  name: cluster-apps-loki
   namespace: flux-system
 spec:
   path: ./kubernetes/apps/monitoring/loki-stack/app
