--- a/kubernetes/apps/monitoring/loki/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/loki/app/helmrelease.yaml
@@ -2,53 +2,42 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: loki-stack
-  namespace: monitoring
+  name: loki
 spec:
-  dependsOn:
-    - name: kube-prometheus-stack
-      namespace: monitoring
   interval: 5m
-  install:
-    timeout: 15m
-    remediation:
-      retries: 5
-  upgrade:
-    timeout: 15m
-    remediation:
-      retries: 5
-      remediateLastFailure: true
-    cleanupOnFail: true
   chart:
     spec:
       # renovate: registryUrl=https://grafana.github.io/helm-charts
-      chart: loki-stack
-      version: 2.9.11
+      chart: loki
+      version: 5.15.0
       sourceRef:
         kind: HelmRepository
-        name: grafana
+        name: grafana-charts
         namespace: flux-system
       interval: 5m
   values:
     loki:
-      enabled: true
-      isDefault: false
-      persistence:
-        enabled: true
-        existingClaim: pvc-loki
-      config:
-        table_manager:
-          retention_deletes_enabled: true
-          retention_period: 2d
-        query_scheduler:
-          max_outstanding_requests_per_tenant: 10000
       serviceMonitor:
         enabled: true
-    promtail:
-      enabled: true
-      serviceMonitor:
-        enabled: true
-    grafana:
-      enabled: false
-    prometheus:
+      limits_config:
+        reject_old_samples: false
+      storage:
+        bucketnames:
+          chunks: loki-chunks
+          ruler: loki-ruler
+          admin: loki-admin
+        s3:
+          s3: s3://minio.kube-system.svc.cluster.local:9001/loki
+          endpoint: minio.kube-system.svc.cluster.local:9001
+          secretAccessKey: "${SECRET_MINIO_SECRET_KEY}"
+          accessKeyId: "${SECRET_MINIO_ACCESS_KEY}"
+          s3ForcePathStyle: true
+          insecure: true
+        filesystem: null
+    monitoring:
+      selfMonitoring:
+        grafanaAgent:
+          installOperator: false
+        enabled: false
+    test:
       enabled: false
