--- a/kubernetes/apps/monitoring/kustomization.yaml
+++ b/kubernetes/apps/monitoring/kustomization.yaml
@@ -8,4 +8,4 @@ resources:
   - ./kube-prometheus-stack/ks.yaml
   - ./kubernetes-dashboard/ks.yaml
   #- ./loki-stack/ks.yaml
-  #- ./loki/ks.yaml
+  - ./loki/ks.yaml
