--- a/kubernetes/apps/monitoring/loki-stack/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/loki-stack/app/helmrelease.yaml
@@ -40,6 +40,8 @@ spec:
         table_manager:
           retention_deletes_enabled: true
           retention_period: 2d
+      limits_config:
+        split_queries_by_interval: 0
       query_scheduler:
         max_outstanding_requests_per_tenant: 10000
       serviceMonitor:
