web node affinity

--- a/kubernetes/apps/default/website/app/helmrelease.yaml
+++ b/kubernetes/apps/default/website/app/helmrelease.yaml
@@ -55,6 +55,15 @@ spec:
         enabled: true
         existingClaim: pvc-website
 
+    affinity:
+      nodeAffinity:
+        requiredDuringSchedulingIgnoredDuringExecution:
+          nodeSelectorTerms:
+            - matchExpressions:
+                - key: kubernetes.io/arch
+                  operator: In
+                  values:
+                    - amd64
     service:
       ports:
         http: &port 80
