--- a/kubernetes/apps/monitoring/loki-stack/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/loki-stack/app/helmrelease.yaml
@@ -37,6 +37,7 @@ spec:
         enabled: true
         existingClaim: pvc-loki-stack
       config:
+        ## important: limit
         limits_config:
           split_queries_by_interval: 0
         table_manager:
