--- a/kubernetes/apps/networking/nginx/internal/plex.yaml
+++ b/kubernetes/apps/networking/nginx/internal/plex.yaml
@@ -1,38 +1,87 @@
-apiVersion: v1
-kind: Service
-metadata:
-  namespace: networking
-  name: plex
-spec:
-  externalName: plex.local
-  ports:
-  - name: https
-    port: 32400
-    protocol: TCP
-    targetPort: 32400
-  sessionAffinity: None
-  type: ExternalName
----
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   namespace: networking
+#   name: plex
+# spec:
+#   externalName: plex.local
+#   ports:
+#   - name: https
+#     port: 32400
+#     protocol: TCP
+#     targetPort: 32400
+#   sessionAffinity: None
+#   type: ExternalName
+# ---
+# apiVersion: networking.k8s.io/v1
+# kind: Ingress
+# metadata:
+#   name: plex
+#   namespace: networking
+#   annotations:
+#     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS" #important
+# spec:
+#   ingressClassName: internal
+#   rules:
+#   - host: plex.${SECRET_DOMAIN}
+#     http:
+#       paths:
+#       - path: /
+#         pathType: Prefix
+#         backend:
+#           service:
+#             name: plex
+#             port:
+#               number: 8006
+#   tls:
+#     - hosts:
+#       - "plex.${SECRET_DOMAIN}"
+
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: plex
   namespace: networking
   annotations:
-    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS" #important
+    #external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
+    nginx.ingress.kubernetes.io/app-root: /web
 spec:
   ingressClassName: internal
   rules:
-  - host: plex.${SECRET_DOMAIN}
-    http:
-      paths:
-      - path: /
-        pathType: Prefix
-        backend:
-          service:
-            name: plex
-            port:
-              number: 8006
+    - host: &host "plex.${SECRET_DOMAIN}"
+      http:
+        paths:
+          - pathType: Prefix
+            path: "/"
+            backend:
+              service:
+                name: plex
+                port:
+                  number: 32400
   tls:
     - hosts:
-      - "plex.${SECRET_DOMAIN}"
+        - *host
+---
+apiVersion: v1
+kind: Endpoints
+metadata:
+  name: plex
+  namespace: networking
+subsets:
+  - addresses:
+      - ip: 192.168.1.25
+    ports:
+      - name: http
+        port: 32400
+        protocol: TCP
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: plex
+  namespace: networking
+spec:
+  ports:
+    - name: http
+      port: 32400
+  type: ClusterIP
