--- a/kubernetes/apps/monitoring/promlens/app/ingress.yaml
+++ b/kubernetes/apps/monitoring/promlens/app/ingress.yaml
@@ -2,7 +2,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: whoami
+  name: promlens
   namespace: default
   annotations:
     external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
