--- a/kubernetes/flux/repositories/helm/kustomization.yaml
+++ b/kubernetes/flux/repositories/helm/kustomization.yaml
@@ -17,5 +17,6 @@ resources:
   - ./kubernetes-dashboard.yaml
   - ./metrics-server.yaml
   - ./prometheus-community.yaml
+  - ./robusta.yaml
   - ./stakater.yaml
   - ./weave-gitops.yaml
