--- a/kubernetes/flux/repositories/helm/robusta.yaml
+++ b/kubernetes/flux/repositories/helm/robusta.yaml
@@ -6,4 +6,5 @@ metadata:
   namespace: flux-system
 spec:
   interval: 1h
-  url: https://robusta-charts.storage.googleapis.com
+  url: https://robusta-charts.storage.googleapis.com/index.yaml
+
