--- a/kubernetes/apps/monitoring/robusta/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/robusta/app/helmrelease.yaml
@@ -56,7 +56,7 @@ spec:
           name: robusta_ui_sink
           token: "${ROBUSTA_SINK_TOKEN}"
 
-    enablePlatformPlaybooks: true
+    #enablePlatformPlaybooks: true
 
     runner:
       sendAdditionalTelemetry: false
