--- a/kubernetes/apps/default/home-assistant/app/helmrelease.yaml
+++ b/kubernetes/apps/default/home-assistant/app/helmrelease.yaml
@@ -44,11 +44,11 @@ spec:
         existingClaim: pvc-home-assistant
     resources:
       requests:
-        cpu: 200m
-        memory: 100Mi
+        cpu: 398m
+        memory: 500Mi
       limits:
         memory: 800Mi
-        cpu: 900m
+        #cpu: 900m
     affinity:
       nodeAffinity:
         requiredDuringSchedulingIgnoredDuringExecution:
