--- a/kubernetes/apps/monitoring/kustomization.yaml
+++ b/kubernetes/apps/monitoring/kustomization.yaml
@@ -5,7 +5,7 @@ resources:
   - ./namespace.yaml
   - ./grafana/ks.yaml
   - ./influxdb/ks.yaml
-  - ./komodor/ks.yaml
+  #- ./komodor/ks.yaml
   - ./kube-prometheus-stack/ks.yaml
   - ./kubernetes-dashboard/ks.yaml
   - ./loki-stack/ks.yaml
