--- a/kubernetes/apps/monitoring/kustomization.yaml
+++ b/kubernetes/apps/monitoring/kustomization.yaml
@@ -8,5 +8,5 @@ resources:
   - ./komodor/ks.yaml
   - ./kube-prometheus-stack/ks.yaml
   - ./kubernetes-dashboard/ks.yaml
-  - ./loki-stack/ks.yaml
+  #- ./loki-stack/ks.yaml
   - ./promlens/ks.yaml
