--- a/kubernetes/apps/flux-system/weave-gitops/app/secret.sops.yaml
+++ b/kubernetes/apps/flux-system/weave-gitops/app/secret.sops.yaml
@@ -4,8 +4,8 @@ metadata:
     name: cluster-user-auth
     namespace: flux-system
 stringData:
-    password: ENC[AES256_GCM,data:ih2GJIwY0iEKGsLpZ/IOCa2SZpw0+Eh7P1KDpXybB4ApPRLtXEB0ddngiMB5oeh2k5NHIYG/qFUeaqAu,iv:PqtU8XNgNio5KChoo0G8/zZMRh7pxoD+Stm3fnEMi6k=,tag:Jr0WIYJUVKYxFzzwEinLuA==,type:str]
-    username: ENC[AES256_GCM,data:I/VsIms=,iv:Dh/tR70jTigTE5mj9Ub6uQF1bMH/pHVvrPBzhG+sk9Q=,tag:lAyWwEmYp5zBYwrcroplxQ==,type:str]
+    password: ENC[AES256_GCM,data:lB50EgjkqfKBeoB7ochMfDs3o5NK4jP3lWlMa217PIu8hv8nzbHIyGZywuLVWnv6KnAkBYu1blROjeHO,iv:bu+Au7zZyrtlfArEnk+rEv49Rd4Sgy8W7CfswWqysYk=,tag:IaTrbQfJ1SiLMygD5bFhmw==,type:str]
+    username: ENC[AES256_GCM,data:u+AlhHc=,iv:BvtKwwOJ8ZJ5GDqBAG95HkDzK7Cb4zGLf8VWMlwkqmA=,tag:XnfgBULST/IF+unsb0hOsA==,type:str]
 type: Opaque
 sops:
     kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age14q9x9ftcpqfw2kmhmlfzpx5g2wmn7tdnq34uhh4x0r2h6qfmm5dqk07z2e
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSByT1NTUjd6UHBiaWJzT3B3
-            SEwyNDE1Q0dqTjYyZ2JYenNlOGpRaGMvalNvClFTbHZwaE9GZ24zYitLaytSVE8w
-            NFpsbHhmOTZ2Mnh3ZUVXT1VsS1hvb3MKLS0tIFZ6Mk1NY0plK3JXb1k4cGxESUZn
-            NzVqWmp0U3h5MTBKaUdHSXIxVHRTWUEK5PenbDowhTpZ59nR1063/HLG2DUDV2/z
-            3NpFNojKT/ySXY8PDBOVNrNTDGBGngnNpI90QxwM5lq+n6riAKAVIg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBkUHc3Vk5GVmcxcTZKcWVx
+            bnJjTXJCL2RxU0tPUUJaLy9RbHo2aU80Y3o0ClFHYUpGVjJERldvVG5tREUvOVhl
+            ZnEwMi9UTzZYdytjcFpzMUpYeldVMGMKLS0tIEZsS0Q4bWlaZUNTVlRrOE1OTVUz
+            dGhTKzF6UDIybGRjb1ZodEh2RVhvSjQKn3Qx63UgTINuhYuXZjQV7XhfXtbE5yzh
+            3m8VJlmJnYPAEvWDTyzLOmFezm99NhHcdZiVf+bsuLo2wbvRYFMuzQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-08-26T23:37:37Z"
-    mac: ENC[AES256_GCM,data:mYTwvsBB9B2kRVyBrQwN8FkxJ2K6ehk7otuupfjeg23Ny2WF1HVFZtHAgQ+ULc2r1HW5UCpkFQQBQBZjU3pCcUOtOkuBbxW8GtEkYN3aFf4Oz+Xg0ww/ccaDI2BheTPN495LLASDAEGBvApewkcqbz2tOKydKS5YYbeVwVY99FU=,iv:Qs/MyHw3ZjeyJdyAivIbvnjQx6G3+se7sQdrNY2MQyg=,tag:zavoNNJiL13uIyrHPcdRyQ==,type:str]
+    lastmodified: "2023-09-04T18:35:38Z"
+    mac: ENC[AES256_GCM,data:6GIMfJjOo9Wys6o35JsAZacoL3SEUm1ec4gFyoP4mTfcYkLOaVcC2ns3D6S8pbRhxCukJfBDUPW1/AFksqhftE0k4epzNdo32k0L9+9Hzn07/wF8XzLQrPeX1Jp/QWXHeYMkJe6awX5icH9yaehrbCJ5T/tJkh760bBSJHzsh/g=,iv:4rj8skjeQRkscSVNPLZeQQK0G2+dfeEGUzetDQVG8Cc=,tag:lK6iLtfGRa0f5GkLXtgcbg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
