--- a/kubernetes/flux/vars/cluster-secrets-user.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets-user.sops.yaml
@@ -4,8 +4,10 @@ metadata:
     name: cluster-secrets-user
     namespace: flux-system
 stringData:
-    SECRET_MAXMIND_LICENSE_KEY: ENC[AES256_GCM,data:isS6xebmKGQ93UysbfGVIa8a+dFU1BR3qEeTssSKdVr32OEuH+OcdQ==,iv:AoB4IEZ+2+FnGYsB9Yz2UPxAdtb6JKHkcU4xKeQOsI4=,tag:P7c9cKvysdMbYfoMqbxDww==,type:str]
-    SECRET_PLACEHOLDER: ENC[AES256_GCM,data:8Ezzeircr+MoJQf2,iv:s2N/qBSfTsIjVms4+Uckcy0Mn7qYc5wfei/4o74gNy8=,tag:QKyVmGO7axCuwylN4Pq7Bw==,type:str]
+    SECRET_MAXMIND_LICENSE_KEY: ENC[AES256_GCM,data:qDFKMVvK70DdGWaGCqICEhsgNDQ8u56OZjsts16BW6e6rEUe9J0Z3g==,iv:9URltK/ppoeF/C7Zd+ac98hq0XKHfZLA3XXYB0zVcAo=,tag:buTwVE6VEdNq/TmKYS1xgg==,type:str]
+    SECRET_PLACEHOLDER: ENC[AES256_GCM,data:mSyuJKRlPyhJu2QT,iv:4/ZXJY4HqQ7PyLHxBTacQKtw33qWhhlCTyiJgQ/kiPc=,tag:5NbPd2uPOmi0RHw9H/o4Mg==,type:str]
+    SECRET_POSTGRES_PASSWORD: ENC[AES256_GCM,data:FEaH7MFYg09A,iv:KHdCKWNvDZLgy+SHH1VYu+Z/Bb8ldQS4OBfUvKaj4Fc=,tag:gWvINjNThgeyTE75y2huqQ==,type:str]
+    SECRET_POSTGRES_USERNAME: ENC[AES256_GCM,data:TBDv6mP+lw==,iv:0CKJUkSG5eZ0gsrCZpna0ry35+ayy4qLQcatCH7j1rI=,tag:mexV0VojZdKfRLiY/JiXLQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -15,14 +17,14 @@ sops:
         - recipient: age14q9x9ftcpqfw2kmhmlfzpx5g2wmn7tdnq34uhh4x0r2h6qfmm5dqk07z2e
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBPTm5tSWpab2hmbHFaWG96
-            THEzd2VDU3V3M1N5T2JNVlAyTE9GR3N3ZVcwCktHTERVL1NsOUcrQUVNSU1oaTlS
-            aUgvK0EvSkJBR3ZxVXJhMlhsek0vUk0KLS0tIGF2SjRTczdHUWFlNGxSQ1ZSUWZE
-            NTYzMk9qcFhtNU1peVljRmo5U0lzYm8KxSPqvn/KUXDyFUR6cU07go7drH0bYtsH
-            ESRxptvos7jwm7R6EWHtMsFeuJ+Uzjonq6MnizLmYujRE3qkJpExhQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAwaUg1QXpYR2VHZ1BSTzBt
+            SHpuZGs2Q3M5d1dCd3V4NGpiakh1akJQK3o0Ck92amw0c2FKRTMvVkJzemFzN2R2
+            TXVXYjFPRHVaVnBoN1FEVHJFNnI3N1UKLS0tIGo4TVNNYXBOdDc1T3BaYStWUERN
+            VmhkdVZnVVV3YnhaNTl2L2RYdXUrVEUKbR/zVXEhC3GWaq1cfaYeEzuAYo/SmCtM
+            ZEn57NUnUmNkA7Ep1Sxrqo7p3Fvh2vvVf/RVpJqnkF/iR2xJod666w==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-08-26T23:37:31Z"
-    mac: ENC[AES256_GCM,data:cE7KrlFDoUxjGMhZ5i5r+37+Bt4GCoYgs6iBCFcBcAJX5ZknGpPYfVoUCZVXPAVk6r6jETJzclekitiEWk8/T10dFA77H8FcFgDwLLoymhVoSeTrdad9AdZFew53a5YNspYZgVJthfeg2JMp77Cqd9g4U7cgxf218UWRMdNRu+A=,iv:ny1fu/jRcGWvqQchx/yQcgniiMcgahgWbV/zYOHAWVA=,tag:mh0UmmorltRjdMryv6kZSg==,type:str]
+    lastmodified: "2023-09-04T18:35:32Z"
+    mac: ENC[AES256_GCM,data:0uHJyA6Mv7AxTJqM9yAOfO9SzxZzga5CiXN8etMQejBL6tXpdigaAjQLRY9UZ2ztSZ5+oOUc/BBq9xtB+rZAmbKivP8kY8dgZhWW2KINnPq2Yp3QSSMkmBqVIGXtVuisfiaEkK7qCVkCGKCE37GdbDdzukWnb1c+urHj8c8jt7I=,iv:BS0CGHMloxcYHeHo9YQLQcfAkZMdbJnpYzmq/2Ucnuk=,tag:R4I8py6UcQ2w1rvjWC/rlQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
