--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,11 +4,12 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:szwpj7dRIvQ3esCtjuBQqWE0P4bm,iv:5jwVynCnw/eOkB+pPDnpA/daZu+IhB9tZjVMjl4P8po=,tag:fzux20em3dDM1aTeCc3AQw==,type:str]
-    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:IfdcMKhMZGthJpkI70kS6Xj1aTwasUcbnJbsEqmi2WkOxg7w,iv:c2vFA3r3rvTB66omML0qzQvLGbIgNHrXp1Z+g2v4eNc=,tag:MgB1YK16kj0VZgawn2jTIg==,type:str]
-    SECRET_DOMAIN: ENC[AES256_GCM,data:50leSeNCqk/digxzwg==,iv:5VsQFEucQdap89kgVVvrY0RzV56kAYT7pzgvb20mTK0=,tag:hsEAg4ydy1UxlNCNWOroxA==,type:str]
-    SECRET_DOMAIN2: ENC[AES256_GCM,data:ksNGbuHivqOsVNA=,iv:2qB514R6bL6EaCiLbWYWx61xip7QlwwkAfkH8/c7TuI=,tag:80f9Zzzy78Skk3TUYIZBSA==,type:str]
-    SECRET_MAXMIND_LICENSE_KEY: ENC[AES256_GCM,data:1SY04vLFK0RWHQEVZYoMkreZ+ksqpzRUHr2fINg8YCIAkNu9okbJGQ==,iv:k2CPKlLz2OPUCRLpjjsX/imX/IhSLZ4E/VJNOpN5wdg=,tag:Tk5sVBU8SKcFslr21R+2GQ==,type:str]
+    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:AHhfM3iUzhBBOGvE82q8ghmC/Y1h,iv:qbNn80y7/U3aqHaRAlomDOdu5QGLCxZa88o40D77yUs=,tag:ViciIkY1GaVRwt6e5f0KiQ==,type:str]
+    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:F/6qe9YBaQ5TA9srCqnIB5wELeAyylKwMTv0w7YRryg5QzZz,iv:snLWOBwIXl0ZfwuO9tS0dXaK6jBlujcPem6S+wAScAo=,tag:98vnPvsY26yJPHMuZkCK7Q==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:kZMJRlcCBGq9osEQhA==,iv:FpDOxHoIE1CH8+B53R2oiDWqzIAYJVz+MRcHTjieC/s=,tag:CfPZ76MnCs/k8bs5c7VDpg==,type:str]
+    SECRET_DOMAIN2: ENC[AES256_GCM,data:tKdO6FAf0fq1uzI=,iv:cvnLHh4jYdOLhI4VTPEpGhmb97pjJWgjAkHk+1In7oU=,tag:HDsURJS9cSN48b+dQY/Faw==,type:str]
+    SECRET_MINIO_ACCESS_KEY: ENC[AES256_GCM,data:hBE2eHrFKd+KNQ4MrwwVUxXzdz/hcFjecf5o12K2id3eBqbr7WFazg==,iv:6P+BAIIzft7J8yeUywo5slZ+5Pyl9gRA5g224+jbqdo=,tag:hcNl/1JigO/cY454CKuJXw==,type:str]
+    SECRET_MINIO_SECRET_KEY: ENC[AES256_GCM,data:57+axeI4W6xmV+F0b4xTwiqrSPM=,iv:xkRnCXAA23rlPXSlJJnJMHdfwu/B5b8i0U7IMr/bq9I=,tag:iocjh2XrPzQYnNCDUQdJYQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -18,14 +19,14 @@ sops:
         - recipient: age14q9x9ftcpqfw2kmhmlfzpx5g2wmn7tdnq34uhh4x0r2h6qfmm5dqk07z2e
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBnZ2ZWL1NhL3UrQUFncm1S
-            cVFOdnVTSGlYUGU5NFpKV2NOd2pDNm53bWpnCkE3WDB2Z3hEQkdvTm1xWWlXczNR
-            djFWaHJTWTJacDVxVGpvdGpFYm8zbm8KLS0tIFYxSUg5MFpEM0t4U2hoeUR1Q1Z5
-            N2tScnRuOURJamZpZjZOMjYzVTJDWTQKJGIqsE2lbulgXhB87NwDtjygJKY9FZ1h
-            p4yL9cz+55QGANtKcXgSruzaOLoGQv/SmknBJcjANRmNOBmbSBftBw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBDVDRuN3ltY3lOZUlzM3F6
+            N2Y3OW15MFFpVkRvWEQ2bkZYT0QyWm5TMGpZClZMODlMeDg0SEhpUXBkdW05eG1T
+            aHhlZER3VUJSWWFQTWJCU1hDdzJsdGcKLS0tIFJMWGI2bVdGVENLU2VFcUcyaFRH
+            VnRaM3BPVWNuU1YwMWsrWXhLS01tS0kKdGu/D6JyB7EtkSguFj71iLLhkTLZLuX8
+            h9nlescCYYS4pa32Q0wVPR+gubJT2FvbAHiZ7/i+u/oovZLBwuj3LQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-08-26T23:37:32Z"
-    mac: ENC[AES256_GCM,data:N4HyUUUi61YrvXgWz0rXuT1PEv94EDQBtzFAqE6dfAB8c1tr76QNOJOV55qPoZgU+H4KF6dFqma66u5bNQXSesryPvxXzuXfzOjYXzgGd7s4B6CUOblWE5X9RLdjLtG1dgweyS8sMYj9X6Z6JBGhZG/A6hNPVSvr3Kr8BtlfdwU=,iv:vSkJyttO6FOZC0fHFewUK+qPA0EHiBzuFKZZbxro8gY=,tag:dn0AmgOF1r80XH8QSU6P2w==,type:str]
+    lastmodified: "2023-09-04T18:35:32Z"
+    mac: ENC[AES256_GCM,data:WWfizk2afb2mQfsLF/NRvPXMVvDfNHYKMvf33NQX2J/1tDVEEZa8QWYfFcV6D0uLgHKXjZgewj4HvpVKI1Ik6Q6khSnQllF3O/5MZt5Zc78T+eXwivdIBIh0ASrM2DRk4ea//Cp6mO1JjWeyICsKcPjnRytURItZvPMU+qU8rYg=,iv:ZQZQGPdAMhLksogjfHXFST4EtjrjdEjdrfQ441YN8cM=,tag:jDbGvd5LmTTjSq2bM9PdQA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
