--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -5,5 +5,6 @@ resources:
   - ./namespace.yaml
   - ./hajimari/ks.yaml
   - ./home-assistant/ks.yaml
+  - ./postgres/ks.yaml
   - ./website/ks.yaml
   - ./whoami/ks.yaml
