--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -5,6 +5,6 @@ resources:
   - ./namespace.yaml
   - ./hajimari/ks.yaml
   - ./home-assistant/ks.yaml
-  - ./postgresql/ks.yaml
+  #- ./postgresql/ks.yaml
   - ./website/ks.yaml
   - ./whoami/ks.yaml
