postgres pgadmin up

--- a/kubernetes/flux/repositories/helm/kustomization.yaml
+++ b/kubernetes/flux/repositories/helm/kustomization.yaml
@@ -19,5 +19,6 @@ resources:
   - ./metrics-server.yaml
   - ./prometheus-community.yaml
   - ./robusta.yaml
+  - ./runix.yaml
   - ./stakater.yaml
   - ./weave-gitops.yaml
