--- a/kubernetes/apps/default/postgresql/ks.yaml
+++ b/kubernetes/apps/default/postgresql/ks.yaml
@@ -14,3 +14,19 @@ spec:
   interval: 30m
   retryInterval: 1m
   timeout: 1m
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: cluster-apps-pgadmin
+  namespace: flux-system
+spec:
+  path: ./kubernetes/apps/default/postgresql/pgadmin
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: home-kubernetes
+  wait: false
+  interval: 30m
+  retryInterval: 1m
+  timeout: 1m
