--- a/kubernetes/apps/default/postgresql/pgadmin/ingress.yaml
+++ b/kubernetes/apps/default/postgresql/pgadmin/ingress.yaml
@@ -5,7 +5,7 @@ metadata:
   name: pgadmin
   namespace: default
   annotations:
-    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
+    #external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
     hajimari.io/enable: "true"
 spec:
   ingressClassName: internal
