--- a/kubernetes/apps/monitoring/vector/app/agent.yaml
+++ b/kubernetes/apps/monitoring/vector/app/agent.yaml
@@ -15,6 +15,12 @@ spec:
         name: vector
         namespace: flux-system
       interval: 1h
+  install:
+    remediation:
+      retries: 5
+  upgrade:
+    remediation:
+      retries: 5
   values:
     role: Agent
     customConfig:
