--- a/kubernetes/apps/monitoring/vector/app/agent.yaml
+++ b/kubernetes/apps/monitoring/vector/app/agent.yaml
@@ -17,10 +17,11 @@ spec:
       interval: 1h
   install:
     remediation:
-      retries: 5
+      retries: 3
   upgrade:
+    cleanupOnFail: true
     remediation:
-      retries: 5
+      retries: 3
   values:
     role: Agent
     customConfig:
